fix alignment of team info and main nav functionality over team section

--- a/main.css
+++ b/main.css
@@ -412,7 +412,8 @@ h2#references {
 #our-team > p {
   font-size: 1.25rem;
   text-align: center;
-  margin: 20px 400px 0 400px;
+  margin: 0 auto;
+  width: 50%;
 }
 
 #our-team > ul {
@@ -424,7 +425,9 @@ h2#references {
 
 #our-team li {
   display: inline-block;
-  margin: 0 90px;
+  margin: 0 5%;
+  width: 20%;
+  vertical-align: top;
 }
 
 #our-team h3 {
@@ -439,8 +442,9 @@ h2#references {
 #our-team img {
   border: 4px solid #282828;
   border-radius: 100%;
-  margin: 0 0 20px 0;
-  width: 250px;
+  margin: 0 auto 20px;
+  width: 15vw;
+  max-width: 250px;
 }
 
 #our-team .individual ul {
